@@ -1,5 +1,11 @@
 2005-03-29  Jonathan Graehl  <graehl@isi.edu>
 
+	* normalize.hpp: typedefs WD (for inside/outside) count_t (counts)
+	prob_t (probs) ... intention to make prob_t float-based, count_t
+	double-based logweights - but will need a change to
+	normalize-in-place ... also changed to integer indices instead of
+	ill-conceived pointeroffset optimization
+
 	* weight.h: Weight = logweight<FLOAT_TYPE> - not tested with
 	carmel or tt
 
